<?xml version="1.0"?>
<package format="2">
  <name>moveit_dashboard</name>
  <version>1.0.0</version>
  <description>Rviz display panel for controlling and debugging MoveIt! applications</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_dashboard</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_dashboard/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_dashboard/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
